--- a/index.html
+++ b/index.html
@@ -1,135 +1,78 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fritflix Feedback</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #111;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      padding: 1em;
+      text-align: center;
+    }
+    h1 { margin-bottom: 1em; font-size: 2em; }
+    button {
+      background-color: #e50914;
+      color: white;
+      border: none;
+      padding: 1em;
+      margin: 0.5em;
+      font-size: 1.2em;
+      border-radius: 0.5em;
+      cursor: pointer;
+      transition: background-color 0.2s ease;
+      width: 90%;
+      max-width: 400px;
+    }
+    button:hover, button:focus { background-color: #c40810; }
+    #status { margin-top: 1em; font-size: 1em; min-height: 1.5em; }
+    @media (max-width: 600px) { h1 { font-size: 1.5em; } button { font-size: 1em; } }
+  </style>
 
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
+  <!-- Formbricks Setup -->
+  <script>
+    window.formbricks = {
+      environmentId: "cmc9a9kx9qubhvz01j0o6ooht", // deine Env ID
+    };
+  </script>
+  <script async src="https://cdn.formbricks.com/index.js"></script>
+</head>
 
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
+<body>
+  <h1>📣 Feedback zu Fritflix</h1>
+  <button onclick="sendFeedback('🎞️ Stream ruckelt')">🎞️ Stream ruckelt</button>
+  <button onclick="sendFeedback('⛔ Stream startet nicht')">⛔ Stream startet nicht</button>
+  <button onclick="sendFeedback('✅ Alles gut')">✅ Alles gut</button>
+  <div id="status"></div>
 
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
-  <html lang="de">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fritflix Feedback</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #111;
-        color: #fff;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        margin: 0;
-        padding: 1em;
-        text-align: center;
-      }
+  <script>
+    async function sendFeedback(messageText) {
+      const statusDiv = document.getElementById("status");
+      statusDiv.textContent = "⏳ Sende Feedback...";
 
-      h1 {
-        margin-bottom: 1em;
-        font-size: 2em;
-      }
-
-      button {
-        background-color: #e50914;
-        color: white;
-        border: none;
-        padding: 1em;
-        margin: 0.5em;
-        font-size: 1.2em;
-        border-radius: 0.5em;
-        cursor: pointer;
-        transition: background-color 0.2s ease;
-        width: 90%;
-        max-width: 400px;
-      }
-
-      button:hover, button:focus {
-        background-color: #c40810;
-      }
-
-      #status {
-        margin-top: 1em;
-        font-size: 1em;
-        min-height: 1.5em;
-      }
-
-      @media (max-width: 600px) {
-        h1 { font-size: 1.5em; }
-        button { font-size: 1em; }
-      }
-    </style>
-  </head>
-  <body>
-    <h1>📣 Feedback zu Fritflix</h1>
-    <button onclick="sendFeedback('Stream ruckelt')">🎞️ Stream ruckelt</button>
-    <button onclick="sendFeedback('Stream startet nicht')">⛔ Stream startet nicht</button>
-    <button onclick="sendFeedback('Alles gut')">✅ Alles gut</button>
-    <div id="status"></div>
-
-    <script>
-      async function sendFeedback(messageText) {
-        const statusDiv = document.getElementById("status");
-        statusDiv.textContent = "⏳ Sende Feedback...";
-
-        try {
-          const response = await fetch("https://api.formbricks.com/v1/responses", { // Angepasste URL
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-              "Authorization": "Bearer 86658e3ab29eddeb432512b74de6bf3a"
-            },
-            body: JSON.stringify({
-              formId: "cmc9a9x1zqnkivo013met32fi",
-              data: {
-                feedback: `🚨 Nutzer-Feedback: ${messageText} 🕒 ${new Date().toLocaleString("de-DE", { timeZone: "Europe/Berlin" })}`
-              }
-            })
-          });
-
-          if (response.ok) {
-            statusDiv.textContent = "✅ Danke für dein Feedback!";
-            setTimeout(() => (statusDiv.textContent = ""), 3000);
-          } else {
-            statusDiv.textContent = "❌ Fehler beim Senden.";
+      try {
+        formbricks.triggerSurvey({
+          surveyId: "cmc9a9x1zqnkivo013met32fi", // deine Survey ID
+          data: {
+            feedback: `${messageText} – ${new Date().toLocaleString("de-DE", { timeZone: "Europe/Berlin" })}`
           }
-        } catch (error) {
-          statusDiv.textContent = "❌ Verbindung fehlgeschlagen.";
-        }
+        });
+
+        statusDiv.textContent = "✅ Danke für dein Feedback!";
+        setTimeout(() => (statusDiv.textContent = ""), 3000);
+      } catch (error) {
+        statusDiv.textContent = "❌ Feedback konnte nicht gesendet werden.";
+        console.error(error);
       }
-    </script>
-  </body>
-  </html>
+    }
+  </script>
+</body>
+</html>
