--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       statusDiv.textContent = "⏳ Sende Feedback...";
 
       try {
-        const response = await fetch("https://app.formbricks.com/api/v1/responses", {
+        const response = await fetch("https://app.formbricks.com/api/v1/management/me", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
