--- a/index.html
+++ b/index.html
@@ -36,48 +36,40 @@
     #status { margin-top: 1em; font-size: 1em; min-height: 1.5em; }
     @media (max-width: 600px) { h1 { font-size: 1.5em; } button { font-size: 1em; } }
   </style>
+
+  <!-- EmailJS Setup -->
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <script>
+    (function() {
+      emailjs.init("E4jHB9-hSCQJ6yEUf"); // Ersetze mit deiner EmailJS Public Key
+    })();
+  </script>
 </head>
+
 <body>
   <h1>📣 Feedback zu Fritflix</h1>
-  <button onclick="sendFeedback('Stream ruckelt')">🎞️ Stream ruckelt</button>
-  <button onclick="sendFeedback('Stream startet nicht')">⛔ Stream startet nicht</button>
-  <button onclick="sendFeedback('Alles gut')">✅ Alles gut</button>
+  <button onclick="sendFeedback('🎞️ Stream ruckelt')">🎞️ Stream ruckelt</button>
+  <button onclick="sendFeedback('⛔ Stream startet nicht')">⛔ Stream startet nicht</button>
+  <button onclick="sendFeedback('✅ Alles gut')">✅ Alles gut</button>
   <div id="status"></div>
 
   <script>
     async function sendFeedback(messageText) {
-  const statusDiv = document.getElementById("status");
-  statusDiv.textContent = "⏳ Sende Feedback...";
+      const statusDiv = document.getElementById("status");
+      statusDiv.textContent = "⏳ Sende Feedback...";
 
-  try {
-    const response = await fetch("https://app.formbricks.com/api/v2/management/responses", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json",
-        "x-api-key": "94e876acb1f8e027f1907153f270627e" // 🔁 Ersetze durch deinen echten API-Key
-      },
-      body: JSON.stringify({
-        surveyId: "cmc9a9x1zqnkivo013met32fi", // 🔁 Ersetze durch deine echte Survey-ID
-        finished: true,
-        data: {
-          feedback: `🚨 Nutzer-Feedback: ${messageText} 🕒 ${new Date().toLocaleString("de-DE", { timeZone: "Europe/Berlin" })}`
-        }
-      })
-    });
-
-    if (response.ok) {
-      statusDiv.textContent = "✅ Danke für dein Feedback!";
-      setTimeout(() => (statusDiv.textContent = ""), 3000);
-    } else {
-      const errText = await response.text();
-      statusDiv.textContent = "❌ Fehler beim Senden.";
-      console.error("Fehlerantwort:", errText);
+      try {
+        await emailjs.send("service_i3ceboq","template_3iie047", {
+          feedback: messageText,
+          timestamp: new Date().toLocaleString("de-DE", { timeZone: "Europe/Berlin" })
+        });
+        statusDiv.textContent = "✅ Danke für dein Feedback!";
+        setTimeout(() => (statusDiv.textContent = ""), 3000);
+      } catch (error) {
+        statusDiv.textContent = "❌ Feedback konnte nicht gesendet werden.";
+        console.error(error);
+      }
     }
-  } catch (error) {
-    statusDiv.textContent = "❌ Verbindung fehlgeschlagen.";
-    console.error(error);
-  }
-}
   </script>
 </body>
 </html>
