--- a/index.html
+++ b/index.html
@@ -28,19 +28,24 @@
       color: white;
       border: none;
       padding: 1em;
-      margin: 0.3em 0;
-      font-size: 1.1em;
+      margin: 0.5em 0;
+      font-size: 1em;
       border-radius: 0.4em;
       cursor: pointer;
-      transition: background-color 0.2s ease;
+      transition: background-color 0.2s ease, transform 0.1s ease;
       width: 95%;
       max-width: 350px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
     }
     button:hover, button:focus {
-      background-color: #c40810;
+      background-color: #f41a22;
+      transform: translateY(-2px);
+    }
+    button:active {
+      transform: translateY(0);
     }
     #status {
-      margin-top: 0.5em;
+      margin-top: 0.8em;
       font-size: 0.9em;
       min-height: 1.5em;
     }
@@ -49,11 +54,12 @@
         font-size: 1.4em;
       }
       button {
-        font-size: 1em;
+        font-size: 0.95em;
         padding: 0.8em;
+        margin: 0.4em 0;
       }
       #status {
-        font-size: 0.8em;
+        font-size: 0.85em;
       }
     }
     @media (max-width: 320px) {
@@ -63,6 +69,10 @@
       button {
         font-size: 0.9em;
         padding: 0.6em;
+        margin: 0.3em 0;
+      }
+      #status {
+        font-size: 0.8em;
       }
     }
   </style>
@@ -94,17 +104,17 @@
   <div id="status"></div>
 
   <script>
-    async function sendFeedback(message) {
-      const statusDiv = document.getElementById('status');
+    async function sendFeedback(messageText) {
+      const statusDiv = document.getElementById("status");
       statusDiv.textContent = "⏳ Sende Feedback...";
 
       try {
         await emailjs.send("service_i3ceboq", "template_3iie047", {
-          feedback: message,
+          feedback: messageText,
           timestamp: new Date().toLocaleString("de-DE", { timeZone: "Europe/Berlin" })
         });
         statusDiv.textContent = "✅ Danke für dein Feedback!";
-        setTimeout(() => statusDiv.textContent = "", 3000);
+        setTimeout(() => (statusDiv.textContent = ""), 3000);
       } catch (error) {
         statusDiv.textContent = "❌ Feedback konnte nicht gesendet werden.";
         console.error("Fehler beim Senden:", error);
