--- a/index.html
+++ b/index.html
@@ -90,34 +90,42 @@
 
 <body>
   <h1>📣 Feedback zu Fritflix</h1>
-  <button onclick="sendFeedback('🔒 Anmeldung nicht möglich')">🔒 Anmeldung nicht möglich</button>
-  <button onclick="sendFeedback('⛔ Stream startet nicht')">⛔ Stream startet nicht</button>
-  <button onclick="sendFeedback('🎞️ Stream ruckelt')">🎞️ Stream ruckelt</button>
-  <button onclick="sendFeedback('⏸️ Stream stoppt an bestimmter Stelle')">⏸️ Stream stoppt an bestimmter Stelle</button>
-  <button onclick="sendFeedback('🔇 Kein Ton vorhanden')">🔇 Kein Ton vorhanden</button>
-  <button onclick="sendFeedback('🔊≠ Ton und Bild nicht synchron')">🔊≠ Ton und Bild nicht synchron</button>
-  <button onclick="sendFeedback('🎵 Originaltonspur fehlt')">🎵 Originaltonspur fehlt</button>
-  <button onclick="sendFeedback('📜 Untertitel fehlen')">📜 Untertitel fehlen</button>
-  <button onclick="sendFeedback('📺 Bildqualität schlecht (kein HD)')">📺 Bildqualität schlecht (kein HD)</button>
-  <button onclick="sendFeedback('🚫 Falscher Film/Serie wird abgespielt')">🚫 Falscher Film/Serie wird abgespielt</button>
-  <button onclick="sendFeedback('📱 App stürzt ab')">📱 App stürzt ab</button>
+  <button onclick="sendFeedback(this, '🔒 Anmeldung nicht möglich')">🔒 Anmeldung nicht möglich</button>
+  <button onclick="sendFeedback(this, '⛔ Stream startet nicht')">⛔ Stream startet nicht</button>
+  <button onclick="sendFeedback(this, '🎞️ Stream ruckelt')">🎞️ Stream ruckelt</button>
+  <button onclick="sendFeedback(this, '⏸️ Stream stoppt an bestimmter Stelle')">⏸️ Stream stoppt an bestimmter Stelle</button>
+  <button onclick="sendFeedback(this, '🔇 Kein Ton vorhanden')">🔇 Kein Ton vorhanden</button>
+  <button onclick="sendFeedback(this, '🔊≠ Ton und Bild nicht synchron')">🔊≠ Ton und Bild nicht synchron</button>
+  <button onclick="sendFeedback(this, '🎵 Originaltonspur fehlt')">🎵 Originaltonspur fehlt</button>
+  <button onclick="sendFeedback(this, '📜 Untertitel fehlen')">📜 Untertitel fehlen</button>
+  <button onclick="sendFeedback(this, '📺 Bildqualität schlecht (kein HD)')">📺 Bildqualität schlecht (kein HD)</button>
+  <button onclick="sendFeedback(this, '🚫 Falscher Film/Serie wird abgespielt')">🚫 Falscher Film/Serie wird abgespielt</button>
+  <button onclick="sendFeedback(this, '📱 App stürzt ab')">📱 App stürzt ab</button>
   <div id="status"></div>
 
   <script>
-    async function sendFeedback(messageText) {
+    async function sendFeedback(button, messageText) {
+      const originalText = button.textContent;
       const statusDiv = document.getElementById("status");
-      statusDiv.textContent = "⏳ Sende Feedback...";
+      button.textContent = "⏳ Sende Feedback...";
+      button.disabled = true; // Deaktiviere Button während des Sendens
 
       try {
         await emailjs.send("service_i3ceboq", "template_3iie047", {
           feedback: messageText,
           timestamp: new Date().toLocaleString("de-DE", { timeZone: "Europe/Berlin" })
         });
-        statusDiv.textContent = "✅ Danke für dein Feedback!";
-        setTimeout(() => (statusDiv.textContent = ""), 3000);
+        button.textContent = "✅ Danke für dein Feedback!";
+        setTimeout(() => {
+          button.textContent = originalText;
+          button.disabled = false;
+        }, 3000);
       } catch (error) {
+        button.textContent = originalText;
+        button.disabled = false;
         statusDiv.textContent = "❌ Feedback konnte nicht gesendet werden.";
         console.error("Fehler beim Senden:", error);
+        setTimeout(() => (statusDiv.textContent = ""), 3000);
       }
     }
   </script>
