--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
   <button onclick="sendFeedback(this, '🔊≠ Ton und Bild nicht synchron')">🔊≠ Ton und Bild nicht synchron</button>
   <button onclick="sendFeedback(this, '🎵 Originaltonspur fehlt')">🎵 Originaltonspur fehlt</button>
   <button onclick="sendFeedback(this, '📜 Untertitel fehlen')">📜 Untertitel fehlen</button>
+  <button onclick="sendFeedback(this, '📜 Untertitel fehlen')">💬≠ Untertitel nicht synchron</button>
   <button onclick="sendFeedback(this, '📺 Bildqualität schlecht (kein HD)')">📺 Bildqualität schlecht (kein HD)</button>
   <button onclick="sendFeedback(this, '🚫 Falscher Film/Serie wird abgespielt')">🚫 Falscher Film/Serie wird abgespielt</button>
   <button onclick="sendFeedback(this, '📱 App stürzt ab')">📱 App stürzt ab</button>
