--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 
 <body>
   <h1>📣 Feedback zu Fritflix</h1>
+  <button onclick="sendFeedback(this, '🔌❌ Server offline')">🔌❌ Server offline</button>
   <button onclick="sendFeedback(this, '🔒 Anmeldung nicht möglich')">🔒 Anmeldung nicht möglich</button>
   <button onclick="sendFeedback(this, '⛔ Stream startet nicht')">⛔ Stream startet nicht</button>
   <button onclick="sendFeedback(this, '🎞️ Stream ruckelt')">🎞️ Stream ruckelt</button>
