--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
   <script>
     emailjs.init({ publicKey: "E4jHB9-hSCQJ6yEUf" });
-    const API_BASE = "https://fritflix.dedyn.io/api";  // Dein NGINX-Proxy zum Flask
+    const API_BASE = "https://fritflix.dedyn.io:33420/api";  // Dein NGINX-Proxy zum Flask
     const SPEEDTEST_TOKEN = "fritflix-speedtest-8f3a9c2e-1d7b-4f6a-9e1c-5d8b3a7f2e9d";  // Dein Token!
 
     let currentMsg = '', requireText = false;
