--- a/index.html
+++ b/index.html
@@ -198,55 +198,55 @@
   <div class="button-container">
     <div class="btn-row">
       <button class="feedback-btn" onclick="sendDirect(this, 'Server offline')" data-orig="Server offline">Server offline</button>
-      <button class="note-btn" onclick="openModal('Server offline')">Mit Beschr.</button>
+      <button class="note-btn" onclick="openModal('Server offline')">📝</button>
     </div>
     <div class="btn-row">
       <button class="feedback-btn" onclick="sendDirect(this, 'Anmeldung nicht möglich')" data-orig="Anmeldung nicht möglich">Anmeldung nicht möglich</button>
-      <button class="note-btn" onclick="openModal('Anmeldung nicht möglich')">Mit Beschr.</button>
+      <button class="note-btn" onclick="openModal('Anmeldung nicht möglich')">M📝</button>
     </div>
     <div class="btn-row">
       <button class="feedback-btn" onclick="sendDirect(this, 'Stream startet nicht')" data-orig="Stream startet nicht">Stream startet nicht</button>
-      <button class="note-btn" onclick="openModal('Stream startet nicht')">Mit Beschr.</button>
+      <button class="note-btn" onclick="openModal('Stream startet nicht')">📝</button>
     </div>
     <div class="btn-row">
       <button class="feedback-btn" onclick="sendDirect(this, 'Stream ruckelt')" data-orig="Stream ruckelt">Stream ruckelt</button>
-      <button class="note-btn" onclick="openModal('Stream ruckelt')">Mit Beschr.</button>
+      <button class="note-btn" onclick="openModal('Stream ruckelt')">📝</button>
     </div>
     <div class="btn-row">
       <button class="feedback-btn" onclick="sendDirect(this, 'Stream stoppt an bestimmter Stelle')" data-orig="Stream stoppt an bestimmter Stelle">Stream stoppt an bestimmter Stelle</button>
-      <button class="note-btn" onclick="openModal('Stream stoppt an bestimmter Stelle')">Mit Beschr.</button>
+      <button class="note-btn" onclick="openModal('Stream stoppt an bestimmter Stelle')">📝</button>
     </div>
     <div class="btn-row">
       <button class="feedback-btn" onclick="sendDirect(this, 'Kein Ton vorhanden')" data-orig="Kein Ton vorhanden">Kein Ton vorhanden</button>
-      <button class="note-btn" onclick="openModal('Kein Ton vorhanden')">Mit Beschr.</button>
+      <button class="note-btn" onclick="openModal('Kein Ton vorhanden')">📝</button>
     </div>
     <div class="btn-row">
       <button class="feedback-btn" onclick="sendDirect(this, 'Ton und Bild nicht synchron')" data-orig="Ton und Bild nicht synchron">Ton und Bild nicht synchron</button>
-      <button class="note-btn" onclick="openModal('Ton und Bild nicht synchron')">Mit Beschr.</button>
+      <button class="note-btn" onclick="openModal('Ton und Bild nicht synchron')">📝</button>
     </div>
     <div class="btn-row">
       <button class="feedback-btn" onclick="sendDirect(this, 'Originaltonspur fehlt')" data-orig="Originaltonspur fehlt">Originaltonspur fehlt</button>
-      <button class="note-btn" onclick="openModal('Originaltonspur fehlt')">Mit Beschr.</button>
+      <button class="note-btn" onclick="openModal('Originaltonspur fehlt')">📝</button>
     </div>
     <div class="btn-row">
       <button class="feedback-btn" onclick="sendDirect(this, 'Untertitel fehlen')" data-orig="Untertitel fehlen">Untertitel fehlen</button>
-      <button class="note-btn" onclick="openModal('Untertitel fehlen')">Mit Beschr.</button>
+      <button class="note-btn" onclick="openModal('Untertitel fehlen')">📝</button>
     </div>
     <div class="btn-row">
       <button class="feedback-btn" onclick="sendDirect(this, 'Untertitel nicht synchron')" data-orig="Untertitel nicht synchron">Untertitel nicht synchron</button>
-      <button class="note-btn" onclick="openModal('Untertitel nicht synchron')">Mit Beschr.</button>
+      <button class="note-btn" onclick="openModal('Untertitel nicht synchron')">📝</button>
     </div>
     <div class="btn-row">
       <button class="feedback-btn" onclick="sendDirect(this, 'Bildqualität schlecht (kein HD)')" data-orig="Bildqualität schlecht (kein HD)">Bildqualität schlecht (kein HD)</button>
-      <button class="note-btn" onclick="openModal('Bildqualität schlecht (kein HD)')">Mit Beschr.</button>
+      <button class="note-btn" onclick="openModal('Bildqualität schlecht (kein HD)')">📝</button>
     </div>
     <div class="btn-row">
       <button class="feedback-btn" onclick="sendDirect(this, 'Falscher Film/Serie wird abgespielt')" data-orig="Falscher Film/Serie wird abgespielt">Falscher Film/Serie wird abgespielt</button>
-      <button class="note-btn" onclick="openModal('Falscher Film/Serie wird abgespielt')">Mit Beschr.</button>
+      <button class="note-btn" onclick="openModal('Falscher Film/Serie wird abgespielt')">📝</button>
     </div>
     <div class="btn-row">
       <button class="feedback-btn" onclick="sendDirect(this, 'App stürzt ab')" data-orig="App stürzt ab">App stürzt ab</button>
-      <button class="note-btn" onclick="openModal('App stürzt ab')">Mit Beschr.</button>
+      <button class="note-btn" onclick="openModal('App stürzt ab')">📝</button>
     </div>
   </div>
 
