--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     </div>
     <div class="btn-row">
       <button class="feedback-btn" onclick="sendDirect(this, 'Anmeldung nicht möglich')" data-orig="Anmeldung nicht möglich">Anmeldung nicht möglich</button>
-      <button class="note-btn" onclick="openModal('Anmeldung nicht möglich')">M📝</button>
+      <button class="note-btn" onclick="openModal('Anmeldung nicht möglich')">📝</button>
     </div>
     <div class="btn-row">
       <button class="feedback-btn" onclick="sendDirect(this, 'Stream startet nicht')" data-orig="Stream startet nicht">Stream startet nicht</button>
