--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     <textarea id="extra-text" placeholder="Zusätzliche Beschreibung..."></textarea>
     <br>
     <button class="feedback-btn" onclick="sendWithText()">Senden mit Text</button>
-    <button onclick="closeModal()">Abbrechen</button>
+    <button class="feedback-btn" style="background: #555;" onclick="closeModal()">Abbrechen</button>
     <button id="no-text-btn" class="feedback-btn" onclick="sendWithoutText()">Ohne Text senden</button>
   </div>
 
